--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,1 +1,4 @@
-@import "tailwindcss";
+body {
+    background: rgb(255, 235, 0);
+    background: linear-gradient(135deg, rgba(255,235,0,1) 0%, rgba(255,68,0,1) 100%);
+}
